# musicbucket

./: .env.dist  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  init-letsencrypt.sh  package-lock.json  package.json  pyproject.toml  system-requirements.txt
.github/workflows/: codeql.yml
docker/: app.docker.ini  entrypoint.sh
docker/nginx/: nginx.conf
src/: app.ini.template  manage.py
src/api/: permissions.py  urls.py
src/api/modules/lastfm/: client.py  serializers.py  urls.py  views.py
src/api/modules/profiles/: serializers.py
src/api/modules/spotify/: filters.py  serializers.py  urls.py  views.py
src/api/modules/spotify/app/: views.py
src/api/modules/spotify/bot/: filters.py
src/api/modules/telegram/: filters.py  serializers.py  urls.py  views.py
src/api/modules/web/: serializers.py  urls.py  views.py
src/app/: urls.py  views.py
src/app/static/app/scss/: base_app.scss
src/app/templates/app/: base_app.html  music.html
src/app/templates/app/components/: sidebar.html
src/app/templates/app/followed_artist/: followed_artist_list.html
src/app/templates/app/followed_artist/tables/: followed_artist_genres_column.html  followed_artist_photo_column.html
src/app/templates/app/saved_spotify_link/: saved_spotify_link_list.html
src/app/templates/app/saved_spotify_link/tables/: saved_spotify_links_actions_column.html  saved_spotify_links_cover_column.html  saved_spotify_links_genres_column.html  saved_spotify_links_link_column.html  saved_spotify_links_link_type_column.html  saved_spotify_links_spotify_url_column.html
src/app/templates/app/sent_spotify_link/: sent_spotify_link_detail.html  sent_spotify_link_list.html
src/app/templatetags/: spotify_tags.py
src/bot/: admin.py  models.py
src/bot/management/commands/: migrate_from_bot_db.py
src/bot/migrations/: 0001_initial.py
src/collagegenerator/: apps.py  forms.py  urls.py  views.py
src/collagegenerator/static/collagegenerator/: package-lock.json  package.json
src/collagegenerator/static/collagegenerator/scss/: base.scss
src/collagegenerator/templates/collagegenerator/: base.html  collage.html
src/collagegenerator/templates/collagegenerator/components/: footer.html
src/front/: urls.py  views.py
src/front/static/front/scss/: home.scss
src/front/templates/front/: base_front.html  home.html
src/lastfm/: admin.py  apps.py  models.py
src/lastfm/migrations/: 0001_initial.py  0002_lastfmuser_user.py
src/main/: db_routers.py  settings.py  sitemaps.py  urls.py  wsgi.py
src/main/static/main/scss/: base.scss
src/main/templates/: base.html
src/main/templates/components/: navbar.html
src/main/templates/main/: base.html
src/main/templates/main/components/: navbar.html
src/profiles/: admin.py  models.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20200403_2029.py  0003_auto_20200411_1406.py
src/profiles/templates/profiles/: login.html
src/spotify/: admin.py  apps.py  client.py  models.py  tables.py  urls.py  views.py
src/spotify/management/commands/: update_users_recent_played_tracks.py
src/spotify/migrations/: 0001_initial.py  0002_auto_20200331_1651.py  0003_auto_20200417_1254.py  0004_spotifytokensset_spotifyuser.py  0005_auto_20211124_1826.py
src/spotify/services/: updater.py
src/spotify/templates/spotify/tables/: saved_spotify_links_link_column.html
src/telegram/: admin.py  apps.py  filters.py  mixins.py  models.py  tables.py  urls.py  views.py
src/telegram/migrations/: 0001_initial.py  0002_telegramuser_photo_url.py  0003_auto_20200411_1406.py  0004_auto_20200417_1254.py
src/telegram/templates/telegram/tables/: sent_spotify_links_cover_column.html  sent_spotify_links_link_column.html  sent_spotify_links_link_type_column.html  sent_spotify_links_spotify_url_column.html
src/web/: urls.py  views.py
src/web/static/web/scss/: home.scss
src/web/templates/web/: base_web.html  home.html
src/web/templates/web/components/: footer.html
src/web/templatetags/: web_tags.py
