[tool.poetry]
name = "musicbucket"
version = "0.1.0"
description = ""
authors = ["Pau Riera <pau.riera.forteza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
djangorestframework = "==3.13.1"
django-compressor = {git = "https://github.com/django-compressor/django-compressor.git", rev = "develop"}  # TODO: Change to 3.0 after 2022/01/01
django-constance = {version = "==2.9.1", extras = ["database"]}
django-storages = "==1.13.1"
django-extensions = "==3.2.0"
django-kaio = "==1.3.0"
django-robots = {git = "https://github.com/jazzband/django-robots.git"}
django-widget-tweaks = "==1.4.12"
pytz = "==2022.2.1"
boto3 = "==1.24.58"
django-bootstrap4 = "==22.2"
django-crispy-forms = "==1.14.0"
psycopg2-binary = "==2.9.3"
django-redis = "==5.2.0"
emoji = "==2.0.0"
markdown = "==3.4.1"
django-filter = "==22.1"
spotipy = "==2.20.0"
pylast = "==5.0.*"
musicbrainzngs = "==0.7.1"
sentry-sdk = "==1.9.5"
raven = "==6.10.0"
django-tables2 = "==2.4.1"
gunicorn = "==20.1.0"
django-hijack = "==3.2.1"
django-cookie-law = "==2.2.0"
whitenoise = "==6.2.0"
django-cors-headers = "==3.13.*"
django-rq = "==2.5.1"
lastfmcollagegenerator = "==0.4.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-checkipdb = "*"
pytest-django = "*"
pytest-eradicate = "*"
pytest-flake8 = "*"
pytest-splinter = "*"
pytest-sugar = "*"
pytest-xdist = "*"
django-debug-toolbar = "*"
ipdb = "*"
whitenoise = "*"
flake8-django = "*"
model-bakery = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
